# mini-rust-compiler

./: Cargo.toml  README.md
grammar/: grammar-transformed.txt  grammar.txt
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
src/ast/: crt.rs  error.rs  expr.rs  item.rs  stmt.rs  type.rs  types.rs
src/ast/expr/: assign.rs  block.rs  cast.rs  fun_call.rs  grouped.rs  if.rs  literal.rs  loop.rs  operator.rs  path.rs  return.rs  underscore.rs  unsafe_block.rs
src/ast/expr/literal/: bool.rs  float.rs  int.rs  unit.rs
src/ast/expr/loop/: inf_loop.rs  while.rs
src/ast/expr/operator/: arith.rs  arithmetic.rs  comp.rs  comparison.rs  lazy_bool.rs  neg.rs  negation.rs
src/ast/item/: extern.rs  func.rs  proto.rs  static.rs
src/ast/item/proto/: param.rs
src/ast/stmt/: expr.rs  let.rs  param.rs
src/codegen/: error.rs  symbol_table.rs
src/lexer/: error.rs  file_reader.rs  helper.rs
src/parser/: error.rs  productions.rs
src/parser/productions/: expr_kind.rs  macros.rs  ops.rs
src/token/: span.rs
tests/: test.mrs
