[package]
name = "mini-rust-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "mini_rust_compiler_components"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fallible-iterator = "0.3"
unicode-ident = "1.0"
debug_tree = "0.4"
